// 引擎模块：MC / Loader 无关的纯 Java 21 主体，四个节点共用。com.tkisor.nekojs.api.* 是对外
// 契约包（零 MC/Loader/Graal import，由 guardLint 按包前缀强制，ADR-0007）；其余包是引擎实现，
// 允许直接依赖 Graal。不发布 Maven 制品，产物由各节点内嵌进平台 fat jar。

plugins {
    id 'java-library'
    id 'idea'
}

version = mod_version
group = mod_group_id


repositories {
    mavenCentral()

    maven {
        url "https://maven.neoforged.net/releases"
    }

    exclusiveContent {
        forRepository {
            maven {
                url "https://cursemaven.com"
            }
        }
        filter {
            includeGroup "curse.maven"
        }
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    // 保留参数名：ContractReflector 反射读 facade 方法的参数名（Text.of(String text) → "text"）
    options.compilerArgs += '-parameters'
}

sourceSets.main {
    resources {
        srcDir "src/main/templates"
    }
}

processResources {
    // 模板变量替换：sourceSets.main.resources.filter{} 不会作用于 processResources 的
    // CopySpec（实测不生效），需在任务级显式声明（api-runtime.properties 的 nekojs.version）
    filesMatching('nekojs/api-runtime.properties') {
        filter { it.replace('${mod_version}', mod_version) }
    }
}

dependencies {
    testImplementation platform(libs.junit.bom)
    testImplementation libs.junit.jupiter
    testImplementation libs.gson
    testRuntimeOnly libs.junit.platform.launcher
    // 25.1.3.6; exported so every platform receives the same remapper SPI.
    api(libs.graal)

    compileOnly libs.jspecify
    compileOnly libs.gson
    compileOnly libs.slf4j.api
    compileOnly libs.log4j.api
    compileOnly libs.log4j.core
    compileOnly libs.jetbrains.annotations
    compileOnly libs.night.config.core
    compileOnly libs.night.config.toml
    compileOnly libs.lombok
    annotationProcessor libs.lombok

    // 测试运行时 stub：compiler/probe 链上的类引用 gson/log4j 等，游戏内由 MC/NeoForge 提供，
    // 但 common 独立测试时需要在 testRuntimeOnly 提供这些实现，否则 NoClassDefFoundError。
    testRuntimeOnly libs.slf4j.api
    testRuntimeOnly libs.log4j.api
    testRuntimeOnly libs.log4j.core
    testRuntimeOnly libs.icu4j
    // night-config：ProbeConfigLoader（probe.toml 读写）依赖；游戏内由平台提供，独立测试需注入
    testRuntimeOnly libs.night.config.core
    testRuntimeOnly libs.night.config.toml

}

test {
    useJUnitPlatform()
    // 主仓根 build.gradle allprojects 的 Test 约定（golden 对比对 locale 敏感）
    systemProperty 'user.language', 'en'
    systemProperty 'user.country', 'US'
    systemProperty 'user.timezone', 'UTC'
    systemProperty 'file.encoding', 'UTF-8'
    // 透传 golden 再生成开关：`-Dnekojs.golden.regenerate=true`（ApiManifestGoldenTest 等
    // golden 测试写回基线后跳过断言；与 :common:regenerateGoldens 的 probe golden 模式一致）
    systemProperty 'nekojs.golden.regenerate', System.getProperty('nekojs.golden.regenerate', 'false')
}

// Guard the common module's MC/loader-agnostic invariant: common must not import
// Minecraft, Forge, or NeoForge types (it is compiled on Java 21 with no MC deps and
// shared across all 4 platforms). Graal imports ARE allowed — common intentionally owns
// the GraalJS engine. Overlaps guardLint's L2 rule; kept so `:common:check` alone catches it.
tasks.register('checkCommonIsolation') {
    group = 'verification'
    description = 'Rejects Minecraft/Forge/NeoForge imports in common (keeps it MC-agnostic).'

    def forbiddenPrefixes = [
        'net.minecraft',
        'net.minecraftforge',
        'net.neoforged'
    ]

    inputs.files(fileTree('src/main/java') { include '**/*.java' })

    doLast {
        def violations = []
        fileTree('src/main/java') { include '**/*.java' }.each { source ->
            source.eachLine { line, number ->
                def trimmed = line.trim()
                if (!trimmed.startsWith('import ') || !trimmed.endsWith(';')) {
                    return
                }
                def importedType = trimmed.substring('import '.length(), trimmed.length() - 1)
                if (importedType.startsWith('static ')) {
                    importedType = importedType.substring('static '.length())
                }
                if (forbiddenPrefixes.any { prefix -> importedType.startsWith(prefix + '.') }) {
                    violations << "${project.relativePath(source)}:${number}: ${line.trim()}"
                }
            }
        }
        if (!violations.isEmpty()) {
            throw new GradleException("common module MC-agnostic isolation violations:\n" + violations.join('\n'))
        }
    }
}

check.dependsOn checkCommonIsolation

compileJava {
    // Graal 的 TruffleLanguage.Registration 等是运行时反射读取，不需要注解处理器，
    // javac 的 [processing] 提示纯属噪音，单独关掉该 lint。
    options.compilerArgs += '-Xlint:-processing'
}

// 注意：api.* 的枚举与 switch 现在同模块编译。若将来又把 api.* 拆成独立制品，跨 jar 的
// $SwitchMap$ 陷阱会原样回来——javac 把 switch over enum 编译成消费方内部的合成类，而
// Gradle 的 ABI 编译回避不会注意到枚举常量重排，会留下错误分派的陈旧 $SwitchMap$。

tasks.register('nbtSmokeTest', Test) {
    group = 'verification'
    description = 'Runs managed API and sandboxed filesystem smoke tests for portable binary NBT.'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        includeTags 'nbt-smoke'
    }
}

// Golden 再生成入口：运行 `./gradlew :common:regenerateGoldens`
tasks.register('regenerateGoldens', Test) {
    group = 'verification'
    description = 'Regenerates probe golden files from current actuals (review the diff, then commit).'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform()
    filter {
        includeTestsMatching 'com.tkisor.nekojs.probe.*'
    }
    systemProperty 'nekojs.golden.regenerate', 'true'
}
